CHG: Dark mode shadow fixes, custom class

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,11 @@ html {
   @apply antialiased;
 }
 
+@theme {
+  --shadow-center: 0px 0px 46px 9px rgba(0, 0, 0, 0.5);
+  --shadow-center-sm: 0px 0px 25px 5px rgba(0, 0, 0, 0.25);
+}
+
 .btn-primary {
   @apply px-4 py-2 text-white antialiased rounded-full bg-rose-600 hover:brightness-105 hover:scale-105 hover:shadow-sm transition-all disabled:bg-rose-600/30 disabled:hover:scale-100;
 }
@@ -23,7 +28,7 @@ html {
 }
 
 .bg-background-secondary {
-  @apply bg-white dark:bg-neutral-800 dark:text-white;
+  @apply bg-gray-100 dark:bg-neutral-800 dark:text-white;
 }
 
 .bg-background-tertiary {
@@ -44,7 +49,7 @@ h1 {
 }
 
 h2 {
-  @apply text-2xl font-bold antialiased ;
+  @apply text-2xl font-bold antialiased;
 }
 
 h3 {
@@ -57,10 +62,4 @@ h3 {
 
 ul li {
   @apply list-disc list-inside;
-}
-
-.center-shadow {
-  box-shadow: 0px 0px 46px 9px rgba(0, 0, 0, 0.57);
-  -webkit-box-shadow: 0px 0px 46px 9px rgba(0, 0, 0, 0.57);
-  -moz-box-shadow: 0px 0px 46px 9px rgba(0, 0, 0, 0.57);
 }
